--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="Hej! I am Björn and this is my home page.This home page is for WDD130 and showcases my abilities.">
+        <meta name="author" content="Björn Andersson">
         <title>Björn Andersson | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
@@ -19,6 +21,11 @@
             <img src="images/profile-picture.jpg" alt = "Hej! My name is Björn!" width = "200">
             <p>Hej! My name is Björn Andersson. I live in Borlänge, Sweden. I enjoy fantasy and music. I am working in QA in Sweden.</p>
         </main>
+        <aside>
+            <h2>Sverige</h2>
+            <img src="images/swedish-flag-m&m.webp" alt="Swedish Flag made of godis">
+            <p>Sweden is a country in northern Europe. It is bordered by Finland to the east and Norway to the west. Stockholm is the capital and many world business such as Volvo, SAAB, H&M, and IKEA are swedish.</p>
+        </aside>
         <footer>
             <p>©2024 🦐 Björn Andersson 🦐 Borlänge, Sweden</p>
         </footer>
