--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -30,6 +30,8 @@
         <aside>
             <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/helsinki-finland/800x450/helsinki-finland-temple-lds-354498-wallpaper.jpg" alt="Helsinki Temple" width="200">
         </aside>
-        <footer>©2024 🦐 Björn Andersson 🦐</footer>
+        <footer>
+            ©2024 🦐 Björn Andersson 🦐
+        </footer>
     </body>
 </html>
