--- a/week03/overlay.html
+++ b/week03/overlay.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="week03/styles/overlay.html">
+        <link rel="stylesheet" href="styles/overlay.css">
     </head>
     <body>
         <main>
@@ -18,6 +18,8 @@
                 </section>
             </div>
         </main>
-        <footer>Footer Content in Fixed Position with bottom set at 0 pixels.</footer>
+        <footer>
+            Footer Content in Fixed Position with bottom set at 0 pixels.
+        </footer>
     </body>
 </html>
