--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://www.linkedin.com/in/y-bj%C3%B6rn-andersson-8b5b2a9a/"></a>
+            <a href="https://www.facebook.com/y.bjornandersson"></a>
             </nav>  
         </header>
         <main>
