--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="https://www.linkedin.com/in/y-bj%C3%B6rn-andersson-8b5b2a9a/"></a>
-            <a href="https://www.facebook.com/y.bjornandersson"></a>
+            <a href="https://www.linkedin.com/in/y-bj%C3%B6rn-andersson-8b5b2a9a/">linkedin</a>
+            <a href="https://www.facebook.com/y.bjornandersson">facebook</a>
             </nav>  
         </header>
         <main>
             <h1>Björn Andersson | WDD 130</h1>
             <img src="images/profile-picture.jpg" alt = "Hej! My name is Björn!" width = "200">
-            <p>Hej! My name is Björn Andersson. I live in Borlänge, Sweden. I enjoy fantasy and music. I am working in QA in Sweden.</p>
+            <p>Hej! My name is Björn Andersson. I live in Borlänge, Sweden. I enjoy fantasy and music. I am working in QA in Sweden. I am designing this webpage as I learn html. I hope to pursue a career in software engineering. I enjoy being kind, gaming and hope to create a safe place for all gamers to gather and enjoy their passions. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit earum doloribus, atque laborum ullam, tenetur nam facilis aliquam porro dolorum laboriosam vitae iusto praesentium nemo necessitatibus recusandae corrupti soluta odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. A, animi!</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/helsinki-finland-temple?lang=eng" target="_blank">Helsinki Finland Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/copenhagen-denmark-temple?lang=eng" target="_blank">Copenhagen Denmark Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/stockholm-sweden-temple?lang=eng" target="_blank">Stockholm Sweden Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Sverige</h2>
             <img src="images/swedish-flag-m&m.webp" alt="Swedish Flag made of godis">
-            <p>Sweden is a country in northern Europe. It is bordered by Finland to the east and Norway to the west. Stockholm is the capital and many world business such as Volvo, SAAB, H&M, and IKEA are swedish.</p>
+            <p>Sweden is a country in northern Europe. It is bordered by Finland to the east and Norway to the west. Stockholm is the capital and many world business such as Volvo, SAAB, H&M, and IKEA.</p>
         </aside>
         <footer>
             <p>©2024 🦐 Björn Andersson 🦐 Borlänge, Sweden</p>
         </footer>
-    </body>
+    </body> <!-- date last modified 2024/10/03 -->
 </html>
