--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <img src="images\rafting_logo.png" alt="">
+            <img src="images/rafting_logo.png" alt="">
             <nav>
                 <a href="index.html">index</a>
                 <a href="about.html">about</a>
@@ -24,10 +24,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images\hero_image.webp" alt="">
+                <img src="images/hero_image.webp" alt="">
                 <h1>Great Adventure Rafting</h1>
                 <article>
-                    <img src="images\happy_rafter.webp" alt="">
+                    <img src="images/happy_rafter.webp" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ducimus, fuga expedita excepturi non aliquam ipsam debitis porro aperiam sequi, quasi laboriosam alias velit. Iure maxime quibusdam at libero culpa!</p>
                 </article>
             </div>    
@@ -37,24 +37,24 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images\rafting_image00.webp" alt="">
-                <img src="images\rafting_image01.webp" alt="">
-                <img src="images\rafting_image02.webp" alt="">
-                <img src="images\rafting_image03.webp" alt="">
-                <img src="images\rafting_image04.webp" alt="">
+                <img src="images/rafting_image00.webp" alt="">
+                <img src="images/rafting_image01.webp" alt="">
+                <img src="images/rafting_image02.webp" alt="">
+                <img src="images/rafting_image03.webp" alt="">
+                <img src="images/rafting_image04.webp" alt="">
             </section>
         </main>
         <footer>
             <p>©2024 | Great Adventure Rafting | Björn Andersson </p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images\facebook_logo.webp" alt="">
+                    <img src="images/facebook_logo.webp" alt="">
                 </a>
                 <a href="https://linkedin.com">
-                    <img src="images\linkedin_logo.webp" alt="">
+                    <img src="images/linkedin_logo.webp" alt="">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="images\instagram_logo.webp" alt="">
+                    <img src="images/instagram_logo.webp" alt="">
                 </a>
             </nav>
         </footer>
