--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Björn Andersson">
-        <meta name="description" content="Project for WDD130, creating a rafting website about us page.">
+        <meta name="description" content="Project for WDD130, creating a rafting website contact us page.">
         <title>White Water Rafting</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
