--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,13 +14,12 @@
     <body>
         <header>
             <img src="images/rafting_logo.png" alt="">
-            <nav>
-                <ul class="navigation">
-                <li><a href="index.html">index</a></li>
-                <li><a href="about.html">about</a></li>
-                </li><a href="trips.html">trips</a></li>
-                </li><a href="contact.html">contact</a></li>
-            </ul>
+            <nav class="navigation">
+                
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <main>
