contact edit update

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,16 +22,16 @@
             </nav>
         </header>
         <main>
-            <ul class = contact>
+            <div class = contact>
                 <div class="team" id="team">
                     <h1>Reach Our Team</h1>
                     <p>Please give us your feedback and help us improve! Or simply tell us what you like!</p>
                 </div>
         
                 <div class="emp" id="emp">
-                    <figure><img src="images/happy_emp.jpg" alt="Happy Employee Image One"><figcaption>Employee 1</figcaption></figure>
-                    <figure><img src="images/happy_emp1.jpg" alt="Happy Employee Image Two"><figcaption>Employee 2</figcaption></figure>
-                    <figure><img src="images/happy_emp2.jpg" alt="Happy Employee Image Three"><figcaption>Employee 3</figcaption></figure>
+                    <figure><img src="images/employee_image1.webp" alt="Happy Employee Image One"><figcaption>Employee 1</figcaption></figure>
+                    <figure><img src="images/employee_image2.webp" alt="Happy Employee Image Two"><figcaption>Employee 2</figcaption></figure>
+                    <figure><img src="images/employee_image3.webp" alt="Happy Employee Image Three"><figcaption>Employee 3</figcaption></figure>
                 </div>
                 <div id="contact_info">
                     <aside>
@@ -75,7 +75,7 @@
                         </p>
                     </form>
                 </div>
-            </ul>
+            </div>
         </main>
         <footer>
             <p>©2024 | Great Adventure Rafting | Björn Andersson </p>
