--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,8 +22,8 @@
             </nav>
         </header>
         <main>
-            <div class = contact>
-                <div class="team" id="team">
+            <div class = "contact">
+                <div id="team">
                     <h1>Reach Our Team</h1>
                     <p>Please give us your feedback and help us improve! Or simply tell us what you like!</p>
                 </div>
@@ -42,7 +42,7 @@
                         <p>email:GreatAdventureRafting@rafting.org</p>
                         <p>phone: +1 234-5678</p>
                     </aside>
-                <div class="right" id="frame">
+                <div id="frame">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11513.3573150121!2d-111.78582339823403!3d43.82806164047195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1730168377130!5m2!1sen!2sse" 
                     width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
@@ -55,7 +55,8 @@
                         </p>
                         <p><label for="email">Email
                         <input type="email" id="email" class="text_input" placeholder="ex. email@gmail.com"> 
-                        </label></p>
+                        </label>
+                        </p>
                         <p>
                             <label>Subject:</label>
                         </p>
@@ -68,7 +69,7 @@
         
                         <p>
                             <label for="message">Message</label>
-                            <textarea name="message" id="message" placeholder="Write here..." ></textarea></p>
+                            <textarea name="message" id="message" placeholder="Write here..." ></textarea>
                         </p>
                         <p id="button">
                             <button type="submit">Proceed</button>
