update to rafting

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <img src="images/rafting_logo.png" alt="">
+            <img src="images/rafting_logo.png" alt="Great Adventure Rafting">
             <nav class="navigation">
                 
                 <a href="index.html">Home</a>
@@ -24,10 +24,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/hero_image.webp" alt="">
+                <img src="images/hero_image.webp" alt="rafters on a river-aerial">
                 <h1>Great Adventure Rafting</h1>
                 <article>
-                    <img src="images/happy_rafter.webp" alt="">
+                    <img src="images/happy_rafter.webp" alt="happy rafters">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ducimus, fuga expedita excepturi non aliquam ipsam debitis porro aperiam sequi, quasi laboriosam alias velit. Iure maxime quibusdam at libero culpa!</p>
                 </article>
             </div>    
@@ -35,7 +35,7 @@
                 <h2> History</h2>
                 <div class="container">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, nostrum.</p>
-                    <img src="images/rafting_history_img.webp" alt="">
+                    <img src="images/rafting_history_img.webp" alt="blue boat on rapids">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
             </section>
@@ -43,23 +43,23 @@
                 <h2>Adventure Awaits You!</h2>
                 <div class="figs">
                     <figure>
-                    <img src="images/rafting_image00.webp" alt="">
+                    <img src="images/rafting_image00.webp" alt="Los Dientes del Diablo">
                     <figcaption>Los Dientes del Diablo</figcaption>
                     </figure>
                     <figure>
-                    <img src="images/rafting_image01.webp" alt="">
+                    <img src="images/rafting_image01.webp" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                     </figure>
                     <figure>
-                    <img src="images/rafting_image02.webp" alt="">
+                    <img src="images/rafting_image02.webp" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                     </figure>
                     <figure>
-                    <img src="images/rafting_image03.webp" alt="">
+                    <img src="images/rafting_image03.webp" alt="Full Day Adventure">
                     <figcaption>Full Day Adventure</figcaption>
                     </figure>
                     <figure>
-                    <img src="images/rafting_image04.webp" alt="">
+                    <img src="images/rafting_image04.webp" alt="Funland Happy Place">
                     <figcaption>Funland Happy Place</figcaption>
                     </figure>
                 </div>
