--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <img src="images/rafting_logo.png" alt="">
+            <img src="images/rafting_logo.png" alt="Great Adventure Rafting">
             <nav class="navigation">   
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -24,7 +24,7 @@
         <main>
             <div class = "contact">
                 <div id="team">
-                    <h1>Reach Our Team</h1>
+                    <h1>Contact Us</h1>
                     <p>Please give us your feedback and help us improve! Or simply tell us what you like!</p>
                 </div>
         
@@ -74,6 +74,7 @@
                         <p id="button">
                             <button type="submit">Proceed</button>
                         </p>
+                        <div class="move_in"><label for="check"></label><input id="check" type="checkbox">Please subscribe me to the monthly newsletter</div>
                     </form>
                 </div>
             </div>
