--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <img src="images/rafting_logo.png" alt="">
+            <img src="images/rafting_logo.png" alt="Great Adventure Rafting">
             <nav class="navigation">
                 
                 <a href="index.html">Home</a>
@@ -30,13 +30,13 @@
             <a href="" target="_blank" class="wireframe">wireframe</a>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images/facebook_logo.webp" alt="">
+                    <img src="images/facebook_logo.webp" alt="facebook">
                 </a>
                 <a href="https://linkedin.com">
-                    <img src="images/linkedin_logo.webp" alt="">
+                    <img src="images/linkedin_logo.webp" alt="linkedin">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram_logo.webp" alt="">
+                    <img src="images/instagram_logo.webp" alt="instagram">
                 </a>
             </nav>
         </footer>
