--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -48,7 +48,7 @@
                 <div id="user_form">
                     <h2>Message</h2>
                     <form>
-                        <p><label for="username">Name</label>
+                        <p><label for="username">Name
                                 <input class="text_input" type="text" id="username" placeholder="name: last, first">
                             </label>
                         </p>
