--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -41,20 +41,19 @@
                         <p>email:GreatAdventureRafting@rafting.org</p>
                         <p>phone: +1 234-5678</p>
                     </aside>
-                <div id="frame">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11513.3573150121!2d-111.78582339823403!3d43.82806164047195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1730168377130!5m2!1sen!2sse" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                </div>
+ 
+                    <div id="frame">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11513.3573150121!2d-111.78582339823403!3d43.82806164047195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1730168377130!5m2!1sen!2sse" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>  
                 <div id="user_form">
                     <h2>Message</h2>
                     <form>
-                        <p><label for="username">Name
+                        <p><label for="username">Name</label>
                                 <input class="text_input" type="text" id="username" placeholder="name: last, first">
-                            </label>
                         </p>
-                        <p> <label for="email">Email
-                                <input type="email" id="email" class="text_input" placeholder="ex. email@gmail.com"> 
-                            </label>
+                        <p> <label for="email">Email</label>
+                            <input type="email" id="email" class="text_input" placeholder="ex. email@gmail.com"> 
                         </p>
                         <p>
                             <label>Subject:</label>
