--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Björn Andersson">
         <meta name="description" content="Project for WDD130, creating a rafting website trip information page.">
-        <title>White Water Rafting</title>
+        <title>White Water Rafting Trips</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
