contact us update

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -73,6 +73,7 @@
                         </p>
                         <div class="move_in"><label for="check"></label><input id="check" type="checkbox">Please subscribe me to the monthly newsletter</div>
                     </form>
+                </div>
             </div>
         </main>
         <footer>
