--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,11 +23,60 @@
             </nav>
         </header>
         <main>
-           
+            <div id="hero">
+                <div>
+                      <h1>Are You Ready for Adventure?</h1>
+                    <p>Great Adventure Rafting!</p>
+                </div>
+                <a href="trips.html">
+                    <div id="call-to-action">
+                        <p>learn more</p>
+                    </div>
+                </a>
+            </div>
+            <section id="sec">
+                <div id="sec-info">
+                    <h2>Availabe Trips</h2>
+                    <p>Select from our many available trips and begin your rafting experience today!</p>
+                </div>
+                <div class="img_home">
+                    <a href="about.html">
+                        <div>
+                            <img src="images/rafting_image02.webp" alt="history" width="250" height="200" >
+                            <span>History</span>
+                        </div>
+                    </a>
+                    <a href="about.html">
+                        <div>
+                            <img src="images/rafting_history_img.webp" alt="who we are" width="250" height="200" >
+                            <span>Overview</span>
+                        </div>
+                    </a>
+                    <a href="about.html">
+                        <div>
+                            <img src="images/happy_rafter.webp" alt="about us" width="250" height="200" >
+                            <span>Audience</span>
+                        </div>
+                    </a>
+                </div>
+            </section>
+            <section id="sec1">
+                <div>
+                    <h3>Keep Up to Date</h3>
+                    <p>Subscribe to our newsletter.</p>
+                </div>
+                <div>
+                    <form>
+                        <input type="text" id="username" placeholder="Name"> 
+                        <input type="email" id="email" placeholder="Email" >
+                        <button>Sign up</button>
+                    </form>
+                </div>
+            </section>
         </main>
         <footer>
             <p>©2024 | Great Adventure Rafting | Björn Andersson </p>
-            <a href="" target="_blank" class="wireframe">wireframe</a>
+            <a href="https://app.moqups.com/PpVoiEE6MBW75ZspVNqkwoQJJQg1aYrA/view/page/a44903ab4" target="_blank" class="wireframe">wireframe</a>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebook_logo.webp" alt="facebook">
