--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Björn Andersson">
-        <meta name="description" content="Project for WDD130, creating a rafting website about us page.">
-        <title>White Water Rafting</title>
+        <meta name="description" content="Project for WDD130, creating a rafting website Home page.">
+        <title>White Water Rafting Home</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
