home page filler lorem

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -50,9 +50,7 @@
                             <div class="more-info">
                                 <h3>Purpose</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Tempore animi quaerat, soluta maiores totam reprehenderit fugiat, 
-                                    ipsum dolor iusto aliquam at sed doloremque aut, odio vero officiis quae quia unde!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus doloribus voluptatem sapiente quisquam voluptates eius!
                                 </p>
                             </div>
                         </div>
@@ -64,9 +62,7 @@
                             <div  class="more-info" >
                                 <h3>Offering</h3>
                                 <p class="more-info" >
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Tempore animi quaerat, soluta maiores totam reprehenderit fugiat, 
-                                    ipsum dolor iusto aliquam at sed doloremque aut, odio vero officiis quae quia unde!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quibusdam nemo, soluta sunt architecto nihil!
                                 </p>
                             </div>
                         </div>
@@ -78,9 +74,7 @@
                             <div class="more-info" >
                                 <h3>Special</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Tempore animi quaerat, soluta maiores totam reprehenderit fugiat, 
-                                    ipsum dolor iusto aliquam at sed doloremque aut, odio vero officiis quae quia unde!
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus sed quidem voluptatum dolor odio maiores.
                                 </p>
                             </div>  
                         </div>
@@ -105,48 +99,43 @@
                 </tr>
                 <tr>
                     <td>
-                        Some events...
+                        events...
                     </td>
                     
                     <td >
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem reprehenderit dolorum maxime eaque 
-                        iure rerum aperiam, vero delectus.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facere animi exercitationem perspiciatis sapiente soluta?
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Some events...
+                        events...
                     </td>
                     <td>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem reprehenderit dolorum maxime eaque 
-                        iure rerum aperiam, vero delectus.
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Some events...
-                    </td>
-                    <td>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem reprehenderit dolorum maxime eaque 
-                        iure rerum aperiam, vero delectus.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nihil impedit accusamus eligendi iure possimus.
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Some events...
+                        events...
                     </td>
                     <td>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem reprehenderit dolorum maxime eaque 
-                        iure rerum aperiam, vero delectus.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima debitis itaque vero dolorem voluptate sit.
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Some events...
+                        events...
                     </td>
                     <td>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem reprehenderit dolorum maxime eaque 
-                        iure rerum aperiam, vero delectus.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit itaque, inventore vero impedit nesciunt accusamus!
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        events...
+                    </td>
+                    <td>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis voluptatum minus voluptate natus deserunt enim.
                     </td>
                 </tr>
             </table>        
