contact title page update

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,7 +53,7 @@
                                 <input class="text_input" type="text" id="username" placeholder="name: last, first">
                         </p>
                         <p> <label for="email">Email</label>
-                            <input type="email" id="email" class="text_input" placeholder="ex. email@gmail.com"> 
+                            <input type="email" id="email" class="text_input" placeholder="ex. email@email.com"> 
                         </p>
                         <p>
                             <label>Subject:</label>
@@ -61,7 +61,7 @@
         
                         <div id="select_one" class="move_in">
                             <p><label><input type="radio" name="rd" value="inquiry">General Inquiry</label></p>
-                            <p><label><input type="radio" name="rd" value="reservation">Reservation question</label></p>
+                            <p><label><input type="radio" name="rd" value="reservation">Reservation Question</label></p>
                             <p><label><input type="radio" name="rd" value="suggestion">Website Suggestion</label></p>
                         </div>
                         <p>
